[FIX] Edit alignment problems
Updated width of elements to match the medium wireframe.

--- a/styles/style.css
+++ b/styles/style.css
@@ -34,7 +34,7 @@ body {
 
 .submit-btn {
   float: right;
-  margin-right: 40.5%;
+  margin-right: 34.5%;
 }
 
 .dark {
@@ -52,7 +52,7 @@ body {
 
 .divider > span {
   border-bottom: 3px solid black;
-  width: 30%;
+  width: 15%;
 }
 
 .list-item {
@@ -69,4 +69,9 @@ body {
 .removeBtn {
   padding: 0.5rem 2rem;
   margin: 0 2rem;
+}
+
+#author,
+#title {
+  width: 30%;
 }
